<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/all_recipes_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/title_all_recipes_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"
        android:padding="18dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="21sp"
        android:text="@string/all_recipes_title_text_view" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_recipes_search_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:closeIcon="@drawable/close"
        app:searchIcon="@drawable/search"
        app:layout_constraintTop_toBottomOf="@+id/title_all_recipes_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <ProgressBar
        android:id="@+id/all_recipes_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_recipes_search_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminateDrawable="@drawable/loader"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/all_recipes_failure_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_recipes_search_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="30dp"
        android:textColor="@color/text_errors"
        android:textSize="20sp"
        android:visibility="gone"
        android:text="@string/error_text"/>

    <TextView
        android:id="@+id/all_recipes_no_result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_recipes_search_bar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:padding="30dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="gone"
        android:text="@string/ingredient_no_result_text_view"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_recipes_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/search_recipes_search_bar"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/all_recipes_cell_layout"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/go_to_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="25dp"
        android:layout_gravity="bottom|start"
        app:fabCustomSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/filter"
        android:textSize="20sp"
        android:backgroundTint="@color/go_to_ingredient"
        android:importantForAccessibility="no" />

</androidx.constraintlayout.widget.ConstraintLayout>