<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black">

    <ImageView
        android:id="@+id/recipe_detail_image_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/recipe_detail" />

    <TextView
        android:id="@+id/recipe_detail_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recipe_detail_image_view"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:textStyle="bold"
        android:textSize="30sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipe_detail_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipe_detail_title_text_view"
        tools:itemCount="5"
        tools:listitem="@layout/ingredient_cell_layout"/>

    <TextView
        android:id="@+id/recipe_detail_instructions_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recipe_detail_recycler_view"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/procedure_detail_recette" />

    <ScrollView
        android:id="@+id/recipe_detail_instructions_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/recipe_detail_instructions_title_text_view"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/detail_recipe_instructions_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"/>
    </ScrollView>

    <ProgressBar
        android:id="@+id/recipe_detail_progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminateDrawable="@drawable/loader"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/recipe_detail_failure_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/text_errors"
        android:textSize="20sp"
        android:visibility="gone"
        android:text="@string/error_text"/>


</androidx.constraintlayout.widget.ConstraintLayout>